fixed overflow issue

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -9,7 +9,9 @@ $font-stack: Helvetica,
 sans-serif;
 $primary-color: #000;
 $white: #fff;
-
+html{
+  overflow: hidden !important;
+}
 body {
   background-color: #161616;
   overflow: hidden;
